--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,11 @@ github_skip_forks: true
 
 # Twitter
 twitter_user: ronghai
-twitter_tweet_button: true
+twitter_tweet_count: 4
+twitter_show_replies: true
+twitter_follow_button: true
+twitter_show_follower_count: false
+twitter_tweet_button: false
 
 # Google +1
 google_plus_one: false
